deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ctf-demo
  labels:
    app.kubernetes.io/part-of: ctf-demo
